# serializer version: 1
# name: test_setting_up_config[False]
  set({
    'ai_task',
    'air_quality',
    'alarm_control_panel',
    'analytics',
    'api',
    'application_credentials',
    'assist_pipeline',
    'assist_satellite',
    'auth',
    'automation',
    'backup',
    'backup.event',
    'backup.sensor',
    'battery',
    'binary_sensor',
    'blueprint',
    'brands',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'counter',
    'cover',
    'date',
    'datetime',
    'device_automation',
    'device_tracker',
    'diagnostics',
    'door',
    'event',
    'fan',
    'ffmpeg',
    'file_upload',
    'frontend',
    'garage_door',
    'gate',
    'geo_location',
    'group',
    'hardware',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'image_upload',
    'infrared',
    'input_boolean',
    'input_button',
    'input_datetime',
    'input_number',
    'input_select',
    'input_text',
    'intent',
    'labs',
    'lawn_mower',
    'light',
    'lock',
    'logger',
    'lovelace',
    'media_player',
    'media_source',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'onboarding',
    'person',
    'power',
    'remote',
    'repairs',
    'scene',
    'schedule',
    'script',
    'search',
    'select',
    'sensor',
    'siren',
    'stt',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'timer',
    'trace',
    'tts',
    'update',
    'vacuum',
    'valve',
    'wake_word',
    'water_heater',
    'weather',
    'web_rtc',
    'websocket_api',
    'window',
    'zone',
  })
# ---
# name: test_setting_up_empty_config[False]
  set({
    'ai_task',
    'air_quality',
    'alarm_control_panel',
    'analytics',
    'api',
    'application_credentials',
    'assist_pipeline',
    'assist_satellite',
    'auth',
    'automation',
    'backup',
    'backup.event',
    'backup.sensor',
    'battery',
    'binary_sensor',
    'blueprint',
    'brands',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'counter',
    'cover',
    'date',
    'datetime',
    'device_automation',
    'device_tracker',
    'diagnostics',
    'door',
    'event',
    'fan',
    'ffmpeg',
    'file_upload',
    'frontend',
    'garage_door',
    'gate',
    'geo_location',
    'hardware',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'image_upload',
    'infrared',
    'input_boolean',
    'input_button',
    'input_datetime',
    'input_number',
    'input_select',
    'input_text',
    'intent',
    'labs',
    'lawn_mower',
    'light',
    'lock',
    'logger',
    'lovelace',
    'media_player',
    'media_source',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'onboarding',
    'person',
    'power',
    'remote',
    'repairs',
    'scene',
    'schedule',
    'script',
    'search',
    'select',
    'sensor',
    'siren',
    'stt',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'timer',
    'trace',
    'tts',
    'update',
    'vacuum',
    'valve',
    'wake_word',
    'water_heater',
    'weather',
    'web_rtc',
    'websocket_api',
    'window',
    'zone',
  })
# ---
